--- a/.github/workflows/ExportPluto.yaml
+++ b/.github/workflows/ExportPluto.yaml
@@ -15,7 +15,7 @@ jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout
+            - name: Checkout this repository
               uses: actions/checkout@v2
 
             - name: Install Julia
